FSPA-571 #comment added functionality to show pickup and dropoff icon if stop include pickups and dropoffs

--- a/src/app/shared/components/stops-line/stops-line.component.html
+++ b/src/app/shared/components/stops-line/stops-line.component.html
@@ -8,8 +8,9 @@
       [style.color]="getColor(stop.status)"
       [style.left.px]="stop.left"
       [style.position]="stop.left ? 'absolute' : ''"
-      [class.icon-dropoff]="isDropOff(stop)"
-      [class.icon-pickup]="!isDropOff(stop)"
+      [class.icon-pickup-dropoff]="isPickupAndDropOff(stop)"
+      [class.icon-dropoff]="isDropOff(stop) && !isPickupAndDropOff(stop)"
+      [class.icon-pickup]="!isDropOff(stop) && !isPickupAndDropOff(stop)"
       (click)="onStopSelect(stop)">
       <bd-popover-content
         #stopPopover
