--- a/src/app/loads/components/load-detail/components/load-view/load-view.component.scss
+++ b/src/app/loads/components/load-detail/components/load-view/load-view.component.scss
@@ -17,6 +17,10 @@ $element-height: 35px;
     border-right: $border;
     align-items: center;
 
+    &.customer-load-no {
+      width: 100%;
+    }
+
     &:last-of-type {
       border-right: 0;
     }
