--- a/src/app/loads/components/load-detail/load-detail.component.html
+++ b/src/app/loads/components/load-detail/load-detail.component.html
@@ -1,7 +1,5 @@
 <div *ngIf="selectedItem">
     <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="'Load'" [anchors]="anchors">
-        <bd-form-button [buttonText]="'edit'" buttonType="small" (click)="onEdit()">
-        </bd-form-button>
     </form-navigation>
     <form>
         <navigation-anchor id="load-view"></navigation-anchor>
@@ -13,7 +11,7 @@
             <requirements-detail [load]="selectedItem"></requirements-detail>
         </bd-view-detail-section>
         <navigation-anchor id="customer-view"></navigation-anchor>
-        <bd-view-detail-section [labelText]="'Customer'" [editButton]="false" [addButton]="false">
+        <bd-view-detail-section [labelText]="'Customer'" [editButton]="true" [addButton]="false" (editClick)="onCustomerEditClick()">
             <customer-detail [company]="selectedItem.customer" [selectedContact]="selectedContact"></customer-detail>
         </bd-view-detail-section>
         <navigation-anchor id="itinerary-view"></navigation-anchor>
