--- a/src/app/loads/components/load-detail/components/appointment-type/appointment-type.component.html
+++ b/src/app/loads/components/load-detail/components/appointment-type/appointment-type.component.html
@@ -1,4 +1,4 @@
-<div class="appointment-type">
+<div class="appointment-type interactive-background">
   <div class="type-container">
     <span class="circle"></span>
     <span class="type interactive-text">{{getAppointmentType(appointment.type)}}</span>
