--- a/src/app/loads/components/load-detail/components/appointment-range/appointment-range.component.html
+++ b/src/app/loads/components/load-detail/components/appointment-range/appointment-range.component.html
@@ -1,4 +1,4 @@
- <div class="date-range-container">
+ <div class="date-range-container interactive-background">
   <div class="date first-date">
     <span class="date-value interactive-text">{{appointment.from | date:'MM/dd/yy'}}</span>
     <span class="time-value interactive-text">{{appointment.from | date:'HH:mm'}}</span>
