--- a/src/app/forms/commodities-forms/base-commodity-form/components/header/header.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header interactive-background">
   <div
     *ngFor="let title of titles; let i=index"
     class="{{size}}"
