--- a/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../../assets/styles/variables';
+@import '../../../../../assets/styles/mixins';
 @import '../../../../../assets/styles/font-icons';
 
 $icon-size: 14px;
@@ -11,13 +12,14 @@ $icon-size: 14px;
   border: 0;
   text-align: right;
   cursor: pointer;
-  background-color: inherit;
+  background-color: $default-background;
   box-shadow: inherit;
   border-bottom: $border;
   border-radius: $default-border-radius;
   outline: 0;
   align-items: center;
   justify-content: flex-end;
+  transition: all $interactive-animation-time;
 
   .prefix-label {
     width: auto;
@@ -45,4 +47,10 @@ $icon-size: 14px;
 
 .bd-disabled {
   color: $label-default-color;
+}
+
+@include interactive-text;
+
+:host-context(.interactive-panel:hover) {
+  @include interactive-background;
 }
