FSPA-555 remove unneeded ngIf section

--- a/src/app/loads/components/load-detail/components/stop-actions/stop-actions.component.html
+++ b/src/app/loads/components/load-detail/components/stop-actions/stop-actions.component.html
@@ -1,4 +1,4 @@
- <div class="commodities-section" *ngIf="isExpanded">
+ <div class="commodities-section">
     <div
       *ngIf="hasDropoffCommodities"
       class="commodities-container dropoff-border">
