--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -11,7 +11,7 @@
 	formControlName="streetAddress1"
 	placeholder="Street address 1"
   [source]="_placeSource"
-  [(value)]="_placeQuery"
+  [(query)]="_placeQuery"
   [itemTemplate]="customItemTemplate"
 	[removeButtonHidden]="false"
   (onRemove)="onAddressRemove()"
