--- a/src/app/forms/load-company-form/load-company-form.component.html
+++ b/src/app/forms/load-company-form/load-company-form.component.html
@@ -2,12 +2,12 @@
   <navigation-anchor id="customer-view"></navigation-anchor>
   <bd-form-section labelText="CUSTOMER">
     <bd-typeahead
+      formControlName="customer"
       [labelText]="'Name or MC#'"
       [footerButtonText]="'Add New Customer'"
       [source]="customerSource"
       (onRemove)="onCustomerRemove()"
-      [(ngModel)]="customerQuery"
-      [ngModelOptions]="{standalone: true}"
+      [(query)]="customerQuery"
       [itemTemplate]="customItemTemplate"
       (onSelect)="onCustomerSelect($event)"
       (onFooterButtonClick)="onAddCustomer()"
