--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -9,7 +9,7 @@
 <bd-typeahead
 	class="bd-form-control"
 	formControlName="streetAddress1"
-	placeholder="Street address 1"
+	placeholder="Street address"
   [source]="_placeSource"
   [(value)]="_placeQuery"
   [itemTemplate]="customItemTemplate"
