FSPA-555 make show stop actions commodities

--- a/src/app/loads/components/load-detail/components/stop-detail-view/stop-detail-view.component.html
+++ b/src/app/loads/components/load-detail/components/stop-detail-view/stop-detail-view.component.html
@@ -1,10 +1,10 @@
 <div class="stop-detail-container" [class.expanded]="isExpanded">
   <div class="stop-detail-info-container interactive-background">
     <div class="left-panel">
-      <appointment-type [appointment]="stop.appointment"></appointment-type>
+      <appointment-type [appointment]="stop.appointment" *ngIf="stop.appointment"></appointment-type>
     </div>
-     <div class="right-panel">
-       <appointment-range [appointment]="stop.appointment"></appointment-range>
+    <div class="right-panel">
+      <appointment-range [appointment]="stop.appointment" *ngIf="stop.appointment"></appointment-range>
     </div>
   </div>
   <stop-actions [stopActions]="stop.stopActions" *ngIf="isExpanded"></stop-actions>
