--- a/src/app/loads/components/load-detail/components/stop-actions/stop-actions.component.html
+++ b/src/app/loads/components/load-detail/components/stop-actions/stop-actions.component.html
@@ -1,34 +1,17 @@
- <div class="commodities-section">
+<div class="commodities-section">
+  <template ngFor let-stopAction [ngForOf]="stopActions" let-stopActionIndex="index">
     <div
-      *ngIf="hasDropoffCommodities"
-      class="commodities-container dropoff-border">
+     [ngClass]="['commodities-container', getStopActionClass(stopAction)]">
       <commodities-header
         size='small'
+        *ngIf="stopActionIndex == 0"
         [titles]="commodityHeaders">
       </commodities-header>
-        <commodity-details
-            *ngFor="let data of dropoffCommodities; let i = index;"
-            [commodity]="data.commodity"
-            [index]="i">
-        </commodity-details>
-          <!--<div class="commodities-notes" *ngIf="tripData.notes.length > 1">
-            {{tripData.notes}}
-          </div>-->
+      <commodity-details
+        *ngFor="let commodity of stopAction.commodities; let i = index;"
+        [commodity]="commodity"
+        [index]="i">
+      </commodity-details>
     </div>
-    <div
-      *ngIf="hasPickupCommodities"
-      class="commodities-container pickup-border">
-      <commodities-header
-        *ngIf="!hasDropoffCommodities"
-         size='small'
-        [titles]="commodityHeaders">
-      </commodities-header>
-        <commodity-details
-          *ngFor="let data of pickupCommodities; let i = index;"
-          [commodity]="data.commodity"
-          [index]="i">
-        </commodity-details>
-        <!--<div class="commodities-notes" *ngIf="tripData.notes.length > 1">
-            {{tripData.notes}}
-        </div>-->
-    </div>
+  </template>
+</div>
