--- a/src/app/forms/stop-actions-form/stop-actions-form.component.html
+++ b/src/app/forms/stop-actions-form/stop-actions-form.component.html
@@ -7,4 +7,4 @@
     </div>
   </div>
 </template>
-<bd-add-button class='bd-form-control' (onClick)='addNewItem()' suffixLabel="Action1"></bd-add-button>
+<a (click)="addNewItem()">Add Action</a>
