--- a/src/app/forms/stop-action-pickup-form/stop-action-pickup-form.component.html
+++ b/src/app/forms/stop-action-pickup-form/stop-action-pickup-form.component.html
@@ -1,9 +1,7 @@
 <form [formGroup]="formGroup">
-  <bd-form-datepicker
-    class="bd-form-control"
-    formControlName="date"
-  >
-  </bd-form-datepicker>
+  <bd-form-switch class="bd-form-control" [labelText]="'Action Type'" [enableButtonSwitch]="true" formControlName="type"
+    [items]="stopActionTypes">
+  </bd-form-switch>
   <pick-up-commodity-form
     [formArray]="formGroup.controls.commodities"
     (update)="onCommodityUpdate($event)"
