FSPA-555 #comment update load edit stop component

--- a/src/app/loads/components/load-edit/components/load-edit-stop/load-edit-stop.component.html
+++ b/src/app/loads/components/load-edit/components/load-edit-stop/load-edit-stop.component.html
@@ -6,7 +6,15 @@
     [disabled]="isLoading"
     [anchors]="anchors">
   </form-navigation>
-  <bd-form-section [disabled]="disabled" [labelText]="'Contact'">
+  <bd-form-section [disabled]="disabled" [labelText]="'Itinerary'">
+    <bd-input class="bd-form-control" [labelText]="'Facility'">
+    </bd-input>
+    <bd-form-switch class="bd-form-control" [labelText]="'Schedule type'" [enableButtonSwitch]="true" [items]="[{key:1, value:'FCFS'}, {key:2, value:'Appt'}]">
+    </bd-form-switch>
+    <bd-form-datepicker
+      class="bd-form-control"
+      [labelText]="'Date'">
+    </bd-form-datepicker>
     <stop-form
       [stop]="selectedItem"
       [load]="parentItem"
