--- a/src/app/loads/components/load-edit/components/load-edit-stop/load-edit-stop.component.scss
+++ b/src/app/loads/components/load-edit/components/load-edit-stop/load-edit-stop.component.scss
@@ -3,4 +3,8 @@
 .load-edit-stop {
   display: block;
   padding-top: 70px;
+
+  .facility-schedule-type-date-container {
+    margin-bottom: 20px;
+  }
 }
