FSPA-554 implement edit load customer form

--- a/src/app/loads/components/load-detail/components/customer-detail/customer-detail.component.html
+++ b/src/app/loads/components/load-detail/components/customer-detail/customer-detail.component.html
@@ -10,7 +10,7 @@
             <span class="company-mc ellipsis interactive-text">MC# {{company.mc}}</span>
         </div>
     </section>
-    <section class="contact-info">
+    <section class="contact-info" *ngIf="selectedContact">
         <bd-user-circle
             [fullName]="fullName"
             class="circle"
