--- a/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
@@ -34,6 +34,15 @@
   }
 }
 
+.white {
+  background: $white;
+  color: $black;
+
+  // &:hover {
+  //   background: $btn-default-hover;
+  // }
+}
+
 .common {
   border: 0;
   border-bottom: $border;
