--- a/src/app/forms/load-company-form/load-company-form.component.html
+++ b/src/app/forms/load-company-form/load-company-form.component.html
@@ -13,18 +13,8 @@
       (onFooterButtonClick)="onAddCustomer()"
       [optionField]="'name'">
     </bd-typeahead>
-    <bd-form-expand *ngIf="this.selectedCustomer" [viewMode]="customerFormViewMode" (changed)="onExpandChanged($event)">
-      <form *ngIf="isCustomerFormExpanded" [formGroup]="loadForm.controls.customerForm" class="edit">
-        <bd-dropdown [labelText]="'Customer type'" formControlName="type" [items]="customerTypes">
-        </bd-dropdown>
-        <bd-dropdown [labelText]="'Status'" formControlName="status" [items]="customerStatuses">
-        </bd-dropdown>
-        <bd-input [labelText]="'MC #'" formControlName="mc">
-        </bd-input>
-      </form>
-    </bd-form-expand>
   </bd-form-section>
-  <bd-form-section labelText=" ">
+  <bd-form-section *ngIf="loadForm.controls.customer.value.name" labelText=" ">
     <bd-dropdown
       class="bd-form-control"
       [labelText]="'Location'"
@@ -36,7 +26,7 @@
       (onItemClick)="onLocationSelect($event)">
     </bd-dropdown>
   </bd-form-section>
-  <bd-form-section labelText=" ">
+  <bd-form-section *ngIf="loadForm.controls.customer.value.name" labelText=" ">
     <bd-dropdown
       class="bd-form-control"
       [labelText]="'Billing Location'"
@@ -48,7 +38,7 @@
       (onItemClick)="onBillingLocationSelect($event)">
     </bd-dropdown>
   </bd-form-section>
-  <bd-form-section labelText=" ">
+  <bd-form-section *ngIf="loadForm.controls.customer.value.name" labelText=" ">
     <bd-dropdown
       class="bd-form-control"
       [labelText]="'Contact'"
@@ -66,6 +56,7 @@
         (click)="onLoadCancel()">
       </bd-button>
       <bd-button
+        [disabled]="!loadForm.controls.customer.value.name"
         color="primary"
         class="bd-button button"
         [text]="'Done'"
