--- a/src/app/forms/load-company-form/load-company-form.component.scss
+++ b/src/app/forms/load-company-form/load-company-form.component.scss
@@ -5,3 +5,25 @@
 :host {
   display: block;
 }
+
+.dropdown-company-item-wrapper {
+  display: flex;
+  height: 50px;
+  padding: 0 $default-margin;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  .full-properties-wrapper {
+    .name-title {
+      color: $black;
+      font-size: $small-font-size;
+    }
+
+    .properties {
+      color: $label-default-color;
+      font-size: $tiny-font-size;
+      margin-top: 5px;
+    }
+  }
+}
