--- a/src/app/loads/components/load-stop-card/load-stop-card.component.html
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.html
@@ -4,22 +4,22 @@
 (click)="onClick()">
   <div class="left">
     <span class="load-number">LD{{load.systemLoadNo}}</span>
-    <span class="company-name">
-      <span [bd-popover]="companyPopover" [popoverOnHover]="popoverOnHover">
-        {{load.customer?.name}}
+    <span class="company-name" *ngIf="load.customer">
+      <span [bd-popover]="companyPopover" [popoverOnHover]="popoverOnHover" [popoverDisbled]="!load.customerBillingLocation || !load.customerLocation">
+        {{load.customer.name}}
         <bd-popover-content
           #companyPopover
           placement="auto"
           [width]="popupWidth"
           [horizontalOffset]="-10"
           [closeOnClickOutside]="closeOnClickOutside">
-          <company-popover [company]="load.customer" [companyBillingLocation]="load.customerBillingLocation" [companyLocation]="load.customerLocation"></company-popover>
+          <company-popover *ngIf="!load.customerBillingLocation || !load.customerLocation" [company]="load.customer" [companyBillingLocation]="load.customerBillingLocation" [companyLocation]="load.customerLocation"></company-popover>
         </bd-popover-content>
       </span>
     </span>
     <span class="customer-load-number">{{load.customerLoadNo}}</span>
   </div>
-  <div class="right stops-container" *ngIf="this.load.stops.length > 1">
+  <div class="right stops-container" *ngIf="this.load.stops && this.load.stops.length > 1">
     <div class="distance-wrapper">
       <span class="firstStopAddress">{{firstStop.facility.address.city}}, {{firstStop.facility.address.state}}</span>
       <span class="lastStopAddress">{{lastStop.facility.address.city}}, {{lastStop.facility.address.state}}</span>
