--- a/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
@@ -36,11 +36,7 @@
 
 .white {
   background: $white;
-  color: $black;
-
-  // &:hover {
-  //   background: $btn-default-hover;
-  // }
+  color: $blue;
 }
 
 .common {
