--- a/src/app/forms/load-info-form/load-info-form.component.html
+++ b/src/app/forms/load-info-form/load-info-form.component.html
@@ -48,6 +48,7 @@
         (click)="onLoadSave()">
       </bd-button>
       <bd-button
+        *ngIf="!load.customer"
         color="primary"
         class="bd-button button"
         [text]="'+ Customer >'"
