--- a/src/app/loads/components/load-stop-card/load-stop-card.component.html
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.html
@@ -5,7 +5,7 @@
   <div class="left">
     <span class="load-number">LD{{load.systemLoadNo}}</span>
     <span class="company-name" *ngIf="load.customer">
-      <span [bd-popover]="companyPopover" [popoverOnHover]="popoverOnHover" [popoverDisbled]="!load.customerBillingLocation || !load.customerLocation">
+      <span [bd-popover]="companyPopover" [popoverOnHover]="popoverOnHover" [popoverDisabled]="!load.customerBillingLocation || !load.customerLocation">
         {{load.customer.name}}
         <bd-popover-content
           #companyPopover
@@ -13,7 +13,7 @@
           [width]="popupWidth"
           [horizontalOffset]="-10"
           [closeOnClickOutside]="closeOnClickOutside">
-          <company-popover *ngIf="!load.customerBillingLocation || !load.customerLocation" [company]="load.customer" [companyBillingLocation]="load.customerBillingLocation" [companyLocation]="load.customerLocation"></company-popover>
+          <company-popover [company]="load.customer" [companyBillingLocation]="load.customerBillingLocation" [companyLocation]="load.customerLocation"></company-popover>
         </bd-popover-content>
       </span>
     </span>
