FSPA-555 fix appointment type display

--- a/src/app/loads/components/load-detail/components/appointment-type/appointment-type.component.html
+++ b/src/app/loads/components/load-detail/components/appointment-type/appointment-type.component.html
@@ -1,6 +1,6 @@
 <div class="appointment-type interactive-background">
   <div class="type-container">
     <span class="circle"></span>
-    <span class="type interactive-text">{{getAppointmentType(appointment.type)}}</span>
+    <span class="type interactive-text">{{getAppointmentType(appointment.scheduleType)}}</span>
   </div>
 </div>
