FSPA-555 style expand/collapse button

--- a/src/app/loads/components/load-detail/components/stop-view/stop-view.component.html
+++ b/src/app/loads/components/load-detail/components/stop-view/stop-view.component.html
@@ -2,7 +2,7 @@
     [class.expanded-view]="isExpanded">
     <component-action-panel>
       <buttons>
-        <div class="btn-container">
+        <div class="expand-collapse-button">
           <button
               [class.icon-down-arrow-bold]="!isExpanded"
               [class.icon-up-arrow-bold]="isExpanded"
