--- a/src/app/loads/components/load-detail/components/stop-view/stop-view.component.scss
+++ b/src/app/loads/components/load-detail/components/stop-view/stop-view.component.scss
@@ -29,6 +29,20 @@ $text-margin: 5px;
     margin-bottom: 0;
   }
 
+  .expand-collapse-button {
+    display: flex;
+    justify-content: center;
+
+    button {
+      padding: 3px;
+      color: $white;
+
+      &:hover {
+        color: $blue;
+      }
+    }
+  }
+
   button {
     padding: 0;
     border: 0;
